# english-tutor

./: .env.example  .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-05-20-stage-0-cli-prototype.md  2026-05-21-stage-1a-core-loop.md  2026-05-21-stage-1b-polish-and-stats.md  2026-05-21-stage-2a-browser-ui.md  (+6 more)
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
scripts/: build_and_serve.sh
tests/: conftest.py  test_asr.py  test_audio.py  test_budget.py  test_cli.py  test_conversation.py  test_custom_scenarios.py  test_evaluator.py  test_grader.py  test_llm.py  test_review.py  test_scenarios.py  test_scenarios_loader.py  test_session.py  test_settings.py  test_smoke.py  test_srs.py  test_srs_engine.py  test_stats.py  test_storage.py  test_tts.py
tests/web/: __init__.py  test_api.py  test_chat.py  test_deps.py  test_errors.py  test_schemas.py  test_services_end.py  test_services_review.py  test_services_session.py  test_services_stats.py  test_services_turn.py  test_smoke.py  test_tts.py
tutor/: asr.py  audio.py  budget.py  cli.py  conversation.py  evaluator.py  grader.py  llm.py  review.py  session.py  settings.py  srs.py  srs_engine.py  stats.py  storage.py  tts.py
tutor/scenarios/: apartment_rental_abroad.yaml  casual_conversation.yaml  coffee_chat_colleague.yaml  custom_storage.py  customer_service_call.yaml  daily_standup.yaml  loader.py  tech_interview_behavioral.yaml  travel_directions.yaml
tutor/web/: __init__.py  api.py  deps.py  errors.py  schemas.py  services.py  tts.py
(+45 files in other folders)
